--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@types/bcryptjs": "^2.4.6",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
+    "next-auth": "^5.0.0-beta.30",
     "prisma": "^7.2.0",
     "razorpay": "^2.9.6",
     "react": "19.2.1",
