--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^2.4.6",
     "class-variance-authority": "^0.7.1",
     "jsonwebtoken": "^9.0.3",
@@ -23,6 +24,7 @@
     "razorpay": "^2.9.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
