--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^2.4.6",
     "class-variance-authority": "^0.7.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next": "16.0.10",
