--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0"
