--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^2.4.6",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.24.10",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.3",
     "jspdf": "^3.0.4",
