--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^2.4.6",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +34,8 @@
     "react-icons": "^5.5.0",
     "resend": "^6.6.0",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.8.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0"
   },
