--- a/realtime-server/package.json
+++ b/realtime-server/package.json
@@ -2,10 +2,12 @@
     "name": "yari-realtime",
     "version": "1.0.0",
     "description": "Realtime signaling server for YariConnect",
-    "main": "server.ts",
+    "main": "dist/server.js",
     "scripts": {
-        "start": "ts-node server.ts",
-        "dev": "nodemon --exec ts-node server.ts"
+        "start": "node dist/server.js",
+        "build": "tsc",
+        "dev": "nodemon --exec ts-node server.ts",
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "@types/express": "^5.0.6",
