Fix Render build: Include dev dependencies for TypeScript compilation

--- a/realtime-server/package.json
+++ b/realtime-server/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "start": "node dist/server.js",
         "build": "tsc",
-        "dev": "nodemon --exec ts-node server.ts",
-        "postinstall": "npm run build"
+        "dev": "nodemon --exec ts-node server.ts"
     },
     "dependencies": {
         "@types/express": "^5.0.6",
