--- a/realtime-server/render.yaml
+++ b/realtime-server/render.yaml
@@ -3,7 +3,7 @@ services:
     name: growthyari-realtime
     runtime: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build && npm prune --production
     startCommand: npm start
     envVars:
       - key: NODE_ENV
