--- a/realtime-server/render.yaml
+++ b/realtime-server/render.yaml
@@ -3,11 +3,9 @@ services:
     name: growthyari-realtime
     runtime: node
     plan: free
-    buildCommand: npm ci && npm run build && npm prune --production
-    startCommand: npm start
+    buildCommand: npm ci --include=dev && npm run build && npm prune --production
+    startCommand: NODE_ENV=production npm start
     envVars:
-      - key: NODE_ENV
-        value: production
       - key: PORT
         value: 3001
       - key: REALTIME_SECRET
