Fix: Force NODE_ENV=development for build and add fallback declarations

--- a/realtime-server/render.yaml
+++ b/realtime-server/render.yaml
@@ -3,7 +3,8 @@ services:
     name: growthyari-realtime
     runtime: node
     plan: free
-    buildCommand: npm ci --include=dev && npm run build && npm prune --production
+    # Force development environment for install to ensure devDependencies (@types) are installed
+    buildCommand: NODE_ENV=development npm install && npm run build && npm prune --production
     startCommand: NODE_ENV=production npm start
     envVars:
       - key: PORT
